# wled-seq

./: .gitignore  Taskfile.yaml  docker-compose.yaml
backend/: .dockerignore  Taskfile.yaml  alembic.ini  capture.pcap  default.toml  effects.py  logging.yaml  pyproject.toml  result.csv  wget-log  wled_seq.db  wled_seq.db.bak
backend/.alembic/: env.py
backend/.alembic/versions/: 063d4c230cff_update_playlist.py  1104c70dcaed_add_playlist.py  314e03cb6558_add_segment_sets.py  571f2a698d60_add_playlist_and_convert_to_postgres.py  6b0fce7ef33f_track_time_optional.py  794e343c3ae2_add_sequence_id_to_sequence.py  863d68aa14f4_add_playlist_repeat.py  93973b82f9c9_init.py
backend/src/api/: led_daemon_client.py  main.py  orm.py
backend/src/api/router/: playlist.py  segment_set.py  sequence.py  wled_host.py
backend/src/api/service/: playlist_service.py  segment_set_service.py  sequence_service.py  wled_host_service.py
backend/src/led_daemon/: __main__.py  main.py  service.py  wled.py
backend/src/lib/: settings.py
backend/src/lib/model/: api.py  sequence.py  wled.py
frontend/: .dockerignore  env-config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.json
frontend/etc/nginx/: hosts.conf
frontend/src/: App.css  App.tsx  api.ts  config.ts  global.d.ts  led-sequence.schema.json  main.tsx
frontend/src/components/: DeleteButton.tsx  Editor.tsx  ExpandButton.tsx  Menu.tsx  Playlist.tsx  Playlists.tsx  ReorderableGrid.tsx  SegmentSet.tsx  SegmentSets.tsx  Sequence.tsx  Sequences.tsx  Sidebar.tsx  Table.tsx  WledHostDataDialog.tsx  WledHostDialog.tsx  WledHosts.tsx  YamlEditor.tsx
frontend/src/components/visualEditor/: Colors.tsx  EffectsOrPalettesSelect.tsx  Field.tsx  Panel.tsx  PanelList.tsx  RgbwTextField.tsx  SegmentPanel.tsx  SequenceReference.tsx  VisualEditor.tsx  util.ts  util.tsx
frontend/src/hooks/: useTableData.tsx
frontend/src/pages/: Editor.tsx  Playlist.tsx  Playlists.tsx  SegmentSet.tsx  SegmentSets.tsx  Sequence.tsx  Sequences.tsx  WledHosts.tsx
frontend/src/types/: api.d.ts
share/db/: wled-seq.db
share/docker/: api.Dockerfile  frontend.Dockerfile  led-daemon.Dockerfile
share/mosquitto/: mosquitto.conf
share/schema/: led_sequence_schema.json  wled_state_schema.json
